[package]
name = "neocal"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3"
configparser = "3.0.0"
term-table = "1.3.2"
clap = { version = "3.2.16", features = ["derive"] }
reqwest = { version = "0.11.11", features = ["json"] }
tokio = { version = "1.12.0", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
