[package]
name = "neocal"
version = "0.5.0"
edition = "2021"
authors = ["Oscar Cortez <om.cortez.2010@gmail.com>"]
license-file = "LICENSE"
description = "Google Calendar Command Line Interface"
readme = "README.md"
exclude = ["events.gs"]
documentation = "https://github.com/oscarmcm/neocal/wiki"
homepage = "https://github.com/oscarmcm/neocal"
repository = "https://github.com/oscarmcm/neocal"
keywords = ["cli", "tui", "google", "calendar"]
categories = ["command-line-utilities"]

[dependencies]
futures = "0.3"
configparser = "3.0.0"
term-table = "1.3.2"
clap = { version = "3.2.16", features = ["derive", "suggestions", "color"] }
reqwest = { version = "0.11.11", features = ["json"] }
tokio = { version = "1.20.3", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
term_size = "0.3.2"
home = "0.5.3"
chrono = "0.4.20"
url = "2.2.2"
